# one-ring

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  conftest.py  justfile  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: getting-started.md  index.md
docs/one-ring-asyncio/: overview.md
docs/one-ring-core/: overview.md
docs/one-ring-http/: overview.md
docs/one-ring-loop/: overview.md
examples/: bridging_async.py  echo_server.py  http_server.py
examples/http_server/: run_server.py
examples/http_server/static/: home.html
one-ring-asyncio/: CLAUDE.md  README.md  justfile  main.py  pyproject.toml
one-ring-asyncio/src/one_ring_asyncio/: __init__.py
one-ring-asyncio/tests/: conftest.py  test_log.py  test_placeholder.py
one-ring-core/: CLAUDE.md  README.md  justfile  main.py  pyproject.toml
one-ring-core/src/one_ring_core/: __init__.py  _ring.py  constants.py  operations.py  results.py  typedefs.py  worker.py
one-ring-core/src/one_ring_core/file/: __init__.py
one-ring-core/src/one_ring_core/socket/: __init__.py
one-ring-core/tests/: test_log.py  test_operations.py  test_placeholder.py  test_sockets.py  test_worker.py
one-ring-http/: CLAUDE.md  README.md  justfile  pyproject.toml
one-ring-http/src/one_ring_http/: __init__.py  middleware.py  request.py  response.py  router.py  server.py  static.py  status.py  typedef.py
one-ring-http/src/one_ring_http/sse/: __init__.py
one-ring-http/src/one_ring_http/websocket/: __init__.py
one-ring-http/tests/: conftest.py  test_log.py  test_middleware.py  test_placeholder.py  test_request.py  test_response.py  test_router.py  test_server.py  test_static.py
one-ring-loop/: CLAUDE.md  README.md  justfile  main.py  pyproject.toml
one-ring-loop/src/one_ring_loop/: __init__.py  _coro.py  _utils.py  cancellation.py  exceptions.py  log.py  loop.py  lowlevel.py  operations.py  sync_primitives.py  task.py  threadpool.py  typedefs.py
one-ring-loop/src/one_ring_loop/fileio/: __init__.py
one-ring-loop/src/one_ring_loop/socketio/: __init__.py
one-ring-loop/src/one_ring_loop/streams/: __init__.py  buffered.py  exceptions.py  memory.py  protocols.py  tls.py
one-ring-loop/src/one_ring_loop/task/: __init__.py  state.py
one-ring-loop/src/one_ring_loop/timerio/: __init__.py
one-ring-loop/tests/: conftest.py  test_cancellation.py  test_fileio.py  test_log.py  test_loop.py  test_placeholder.py  test_sleep.py  test_socketio.py  test_sync_primitives.py  test_taskgroup.py  test_threadpool.py  test_timerio.py
one-ring-loop/tests/streams/: conftest.py  test_buffered_byte_stream.py  test_memory_object_stream.py  test_tls_stream.py
resources/: io_uring_project_plan.md
rusty-ring/: CLAUDE.md  Cargo.toml  README.md  justfile  pyproject.toml
rusty-ring/python/rusty_ring/: __init__.py  __init__.pyi
rusty-ring/src/: lib.rs
rusty-ring/tests/: test_ring.py
