[project]
name = "one-ring-http"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Otto Sellerstam", email = "ottosellerstam@gmail.com" },
]
dependencies = [
    "structlog>=24.0",
    "one-ring-loop",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/one_ring_http"]

# ── Coverage (per-package source) ───────────────────────────────────────
# Other coverage settings (fail_under, exclude_lines) are in root pyproject.toml.

[tool.coverage.run]
source = ["one_ring_http"]
branch = true
